<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/radius_round_fragments_edges">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/todo_edit_name"
        android:layout_width="336dp"
        android:layout_height="63dp"
        android:layout_margin="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/todo_edit_todo_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/light_purple"
            android:hint="@string/edit_item_field_name"
            android:inputType="textCapSentences" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/todo_edit_description"
        android:layout_width="336dp"
        android:layout_height="63dp"
        android:layout_margin="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/todo_edit_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/todo_edit_todo_description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/light_purple"
            android:hint="@string/edit_item_field_description"
            android:inputType="textCapSentences" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/todo_form_edit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/salvar_edic_button_string"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/todo_edit_description" />


</androidx.constraintlayout.widget.ConstraintLayout>